--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Malla Audiovisión UNLa - Plan 2015</title>
+  <title>Plan Audiovisión UNLa</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Malla de la Lic. en Audiovisión (UNLa)</h1>
-  <p>Hacé clic en una materia para marcarla como aprobada. Se irán desbloqueando las siguientes.</p>
+  <h1>Licenciatura en Audiovisión (UNLa)</h1>
+  <p>Hacé clic en una materia para marcarla como aprobada</p>
   <div id="malla"></div>
   <script src="script.js"></script>
 </body>
