--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Licenciatura en Audiovisión (UNLa)</h1>
+  <h1 class="title">Licenciatura en Audiovisión (UNLa)</h1>
   <p>Hacé clic en una materia para marcarla como aprobada</p>
   <div id="malla"></div>
   <script src="script.js"></script>
