--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1 class="title">Licenciatura en Audiovisión (UNLa)</h1>
-  <p>Hacé clic en una materia para marcarla como aprobada</p>
+  <p>1 click: materia cursada - 2 clicks: materia aprobada</p>
   <div id="malla"></div>
   <script src="script.js"></script>
 </body>
