--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <h1 class="title">Licenciatura en Audiovisión (UNLa)</h1>
   <p>1 click: materia cursada - 2 clicks: materia aprobada</p>
   <div id="malla"></div>
+  <div id="progreso-container">
+  <div id="progreso-barra"></div>
+  <div id="progreso-texto"></div>
+</div>
   <script src="script.js"></script>
 </body>
 </html>
