--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <h1 class="title">Licenciatura en Audiovisión (UNLa)</h1>
   <p>1 click: materia cursada - 2 clicks: materia aprobada</p>
   <div id="malla"></div>
-  <div id="progreso-container">
+<div id="progreso">
   <div id="progreso-barra"></div>
-  <div id="progreso-texto"></div>
+  <span id="progreso-texto">0% Aprobado</span>
 </div>
   <script src="script.js"></script>
 </body>
