--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
 <body>
   <h1 class="title">Licenciatura en Audiovisión (UNLa)</h1>
   <p>1 click: materia cursada - 2 clicks: materia aprobada</p>
-  <div id="malla"></div>
-  <div id="progreso-container">
-    <div id="progreso-barra"></div>
-    <span id="progreso-texto">0% Aprobado</span>
-</div>
+
+  <div id="progreso-tecnico-container" class="progreso-container">
+    <div id="progreso-tecnico-barra" class="progreso-barra"></div>
+    <span id="progreso-tecnico-texto" class="progreso-texto">0% Técnico aprobado</span>
+  </div>
+
+  <div id="progreso-licenciatura-container" class="progreso-container">
+    <div id="progreso-licenciatura-barra" class="progreso-barra"></div>
+    <span id="progreso-licenciatura-texto" class="progreso-texto">0% Licenciatura aprobada</span>
+  </div>
+
+  <div id="tecnico-container">
+    <h2>Técnico en Audiovisión</h2>
+    <div id="malla-tecnico" class="malla"></div>
+  </div>
+
+  <div id="licenciatura-container">
+    <h2>Licenciatura en Audiovisión</h2>
+    <div id="malla-licenciatura" class="malla"></div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
