--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Plan Audiovisión UNLa</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1 class="title">Licenciatura en Audiovisión (UNLa)</h1>
@@ -19,16 +19,10 @@
     <span id="progreso-licenciatura-texto" class="progreso-texto">0% Licenciatura aprobada</span>
   </div>
 
- <div id="licenciatura-container">
-  <h2>Licenciatura en Audiovisión</h2>
-
-  <div id="tecnico-container">
-    <h3>Técnico en Audiovisión</h3>
-    <div id="malla-tecnico" class="malla"></div>
+  <div id="licenciatura-container">
+    <h2>Licenciatura en Audiovisión</h2>
+    <div id="malla" class="malla"></div>
   </div>
-
-  <div id="malla-licenciatura" class="malla"></div>
-</div>
 
   <script src="script.js"></script>
 </body>
