--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Plan Audiovisión UNLa</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1 class="title">Licenciatura en Audiovisión (UNLa)</h1>
@@ -21,13 +21,7 @@
 
   <div id="licenciatura-container">
     <h2>Licenciatura en Audiovisión</h2>
-
-    <div id="tecnico-container">
-      <h3>Técnico en Audiovisión</h3>
-      <div id="malla-tecnico" class="malla"></div>
-    </div>
-
-    <div id="malla-licenciatura" class="malla"></div>
+    <div id="malla" class="malla"></div>
   </div>
 
   <script src="script.js"></script>
