--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <h1 class="title">Licenciatura en Audiovisión (UNLa)</h1>
   <p>1 click: materia cursada - 2 clicks: materia aprobada</p>
 
-  <div id="progreso-tecnico-container" class="progreso-container">
-    <div id="progreso-tecnico-barra" class="progreso-barra"></div>
-    <span id="progreso-tecnico-texto" class="progreso-texto">0% Técnico aprobado</span>
+  <div id="progreso-tecnicatura-container" class="progreso-container">
+    <div id="progreso-tecnicatura-barra" class="progreso-barra"></div>
+    <span id="progreso-tecnicatura-texto" class="progreso-texto">0% Tecnicatura aprobado</span>
   </div>
 
   <div id="progreso-licenciatura-container" class="progreso-container">
