--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     <div id="progreso-licenciatura-barra" class="progreso-barra"></div>
     <span id="progreso-licenciatura-texto" class="progreso-texto">0% Licenciatura aprobada</span>
   </div>
-
+  
+ <div id="licenciatura-container">
+    <h2>Licenciatura en Audiovisión</h2>
+    <div id="malla" class="malla"></div>
+  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
