--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
  <div id="licenciatura-container">
     <h2>Licenciatura en Audiovisión</h2>
-    <div id="malla" class="malla"></div>
+    <div id="malla-licenciatura" class="malla"></div>
   </div>
   
   <script src="script.js"></script>
