--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   </div>
   
  <div id="licenciatura-container">
-    <h2>Licenciatura en Audiovisión</h2>
-    <div id="malla-licenciatura" class="malla"></div>
+    <div id="malla" class="malla"></div>
   </div>
   
   <script src="script.js"></script>
