--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <div id="malla" class="malla"></div>
   </div>
   
-  <script src="script.js"></script>
+  <script src="script.js?=1.2"></script>
 </body>
 </html>
